--- a/.env
+++ b/.env
@@ -1,27 +1,21 @@
-SECRET_KEY=your-secret-key-here
+# Database
+SQLALCHEMY_DATABASE_URL=postgresql+psycopg2://postgres:admin@localhost:5432/my_hrms_db
+
+# Authentication (use a proper 32+ character secret key)
+SECRET_KEY=this-is-a-very-secure-32-char-secret-key-1234
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
-SQLALCHEMY_DATABASE_URL=sqlite:///./hrms.db
 
-
-
-# Email Configuration
+# Email (commented out since we'll handle separately)
 # EMAIL_HOST=smtp.gmail.com
 # EMAIL_PORT=465
 # EMAIL_USE_SSL=True
 # EMAIL_USER=syedjawadali92@gmail.com
-# EMAIL_PASSWORD=ctpgxfclwyucweni  # 👉 This is your Gmail App Password, not regular Gmail password
+# EMAIL_PASSWORD=ctpgxfclwyucweni
 # ADMIN_EMAIL=syedjawadali92@gmail.com
 
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=465
-EMAIL_USE_SSL=True
-EMAIL_USER=syedjawadali92@gmail.com
-EMAIL_PASSWORD=ctpgxfclwyucweni
-ADMIN_EMAIL=syedjawadali92@gmail.com
-
-
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_DB=0
-REDIS_CACHE_TTL=300
+# Redis (commented out since we'll handle separately)
+# REDIS_HOST=localhost
+# REDIS_PORT=6379
+# REDIS_DB=0
+# REDIS_CACHE_TTL=300
