--- a/.env
+++ b/.env
@@ -6,16 +6,16 @@ SECRET_KEY=this-is-a-very-secure-32-char-secret-key-1234
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# Email (commented out since we'll handle separately)
-# EMAIL_HOST=smtp.gmail.com
-# EMAIL_PORT=465
-# EMAIL_USE_SSL=True
-# EMAIL_USER=syedjawadali92@gmail.com
-# EMAIL_PASSWORD=ctpgxfclwyucweni
-# ADMIN_EMAIL=syedjawadali92@gmail.com
+Email (commented out since we'll handle separately)
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=465
+EMAIL_USE_SSL=True
+EMAIL_USER=syedjawadali92@gmail.com
+EMAIL_PASSWORD=ctpgxfclwyucweni
+ADMIN_EMAIL=syedjawadali92@gmail.com
 
-# Redis (commented out since we'll handle separately)
-# REDIS_HOST=localhost
-# REDIS_PORT=6379
-# REDIS_DB=0
-# REDIS_CACHE_TTL=300
+Redis (commented out since we'll handle separately)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_CACHE_TTL=300
