--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ SECRET_KEY=this-is-a-very-secure-32-char-secret-key-1234
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-Email (commented out since we'll handle separately)
+# Email settings
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=465
 EMAIL_USE_SSL=True
@@ -14,7 +14,7 @@ EMAIL_USER=syedjawadali92@gmail.com
 EMAIL_PASSWORD=ctpgxfclwyucweni
 ADMIN_EMAIL=syedjawadali92@gmail.com
 
-Redis (commented out since we'll handle separately)
+# Redis settings
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_DB=0
