--- a/alembic.ini
+++ b/alembic.ini
@@ -85,7 +85,8 @@ path_separator = os
 # other means of configuring database URLs may be customized within the env.py
 # file.
 ; sqlalchemy.url = driver://user:pass@localhost/hrms
-sqlalchemy.url = sqlite:///./hrms.db
+sqlalchemy.url = postgresql+psycopg2://postgres:admin@localhost:5432/my_hrms_db
+
 
 
 
